--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -303,6 +303,7 @@
 </div>
 <!--船舶范围搜索-->
 <div id="ShipSearch_DWTRange">
+    <!--<span>船舶搜索</span>-->
     <div class="Search_Info">
         类型: <input type="text" type="0" class="Search_typeText">
         <ul class="Search_typeSelect">
@@ -314,9 +315,11 @@
         </ul>
         &nbsp;DWT: <input type="text" placeholder="0" class="min_dwt"> &nbsp; 至 &nbsp; <input type="text" placeholder="9999999" class="max_dwt">
         <div class="DWTSearch_btn"></div>
-        <div class="ShipSearch_ShowBtn"></div>
+        <!--<div class="ShipSearch_ShowBtn"></div>-->
     </div>
+    <div class="ShipSearch_ShowBtn"></div>
 </div>
+<!--<div class="ShipSearch_ShowBtn"></div>-->
 <!--船舶搜索结果-->
 <div id="searchShipList">
     <!--<div class="fleet_title">-->
