--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -701,8 +701,22 @@
             <li><span>基差</span><span>不符合</span><span>不符合</span><span>+0000</span><span>+000000</span><span>不符合</span><span>不符合</span><span>不符合</span><span>+00h00m</span><span>+00h00m</span><span>+00</span><span></span></li>
         </ul>
     </div>
-
+    <div class="dividing_line StandardRoute_line"></div>
+    <div class="StandardRoute_SaveBtn">保存</div>
+    <div class="StandardRoute_CancelBtn">取消</div>
 </div>
+<!--航次——标准货物-->
+<div id="voyage_StandardGoods">
+    <div class="fleet_title">
+        <span>标准航线</span>
+        <div class="title_offbtn"></div>
+    </div>
+</div>
+
+
+
+
+
 
 
 <div id="portBasicInfo">
