--- a/public/stylesheets/fleet.css
+++ b/public/stylesheets/fleet.css
@@ -92,7 +92,7 @@
 
 /*船舶详情页面*/
 /*#shipDetails{width:385px;height:436px;top:10px;left:400px;display:block;}*/
-#shipDetails{width:450px;height:436px;top:10px;left:400px;display:block;}
+#shipDetails{width:450px;height:436px;top:10px;left:400px;display:none;}
 .shipName{font-size:14px;color:#fff;padding-top:3px;}
 .shipInfo_show{width:96%;height:160px;margin:5px auto;}
 .shipInfo_show>.shipInfo_List{width:250px;height:176px;float:right;}
@@ -112,12 +112,16 @@
 .shipInfo_List>li:nth-child(15)>i:active{background:url("/images/update_down.png");}
 .shipInfo_List>li>img{width:16px;height:11px;background:#ccc;position:relative;top:2px;}
 /*轮播图*/
-.shipInfo_show>.shipInfo_img{float:left;width:80px;height:80px;position:relative;top:40px;left:20px;}
-.shipInfo_imgShow{width:80px;height:60px;overflow:hidden;border-radius:1px;}
+.shipInfo_show>.shipInfo_img{float:left;width:80px;height:80px;position:relative;top:10px;left:20px;}
+/*.shipInfo_show>.shipInfo_img{float:left;width:80px;height:80px;position:relative;top:40px;left:20px;}*/
+.shipInfo_imgShow{width:140px;height:100px;overflow:hidden;border-radius:1px;}
+/*.shipInfo_imgShow{width:80px;height:60px;overflow:hidden;border-radius:1px;}*/
 /*.shipInfo_imgShow{width:80px;height:60px;background:url('http://192.168.0.66/group1/M00/00/01/wKgAQll6m1OAfTMpAAIj217DXV4158.s.jpg') center no-repeat;overflow:hidden;}*/
 .shipInfo_imgShow>ul{width:800px;position:relative;}
-.shipInfo_imgShow>ul>li{display:inline-block;width:80px;height:60px;float:left;}
-.shipInfo_imgBtn{height:14px;width:90%;margin:3px auto;clear:both;}
+.shipInfo_imgShow>ul>li{display:inline-block;width:140px;height:100px;float:left;}
+/*.shipInfo_imgShow>ul>li{display:inline-block;width:80px;height:60px;float:left;}*/
+/*.shipInfo_imgBtn{height:14px;width:90%;margin:3px auto;clear:both;}*/
+.shipInfo_imgBtn{height:14px;width:140px;margin:5px auto;clear:both;}
 .shipInfo_imgBtn>span{width:16px;height:16px;float:left;cursor:pointer;}
 .shipInfo_imgBtn>.imgBtn_left{background:url("/images/left.png");}
 .shipInfo_imgBtn>.imgBtn_left:hover{background:url("/images/left-hover.png");}
