--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -290,8 +290,8 @@
                     <li FleetNumber="F13">Q-Max</li>
                 </ul>
             </li>
-            <li class="shipInfo_Time"><span>进入时间: </span><input id="shipInfo_EnterTime" size="12"/></li>
-            <li class="shipInfo_Time"><span>离开时间: </span><input id="shipInfo_LeaveTime" size="12"/></li>
+            <li class="shipInfo_Time"><span>进入时间: </span><input id="shipInfo_EnterTime" size="12" readonly/></li>
+            <li class="shipInfo_Time"><span>离开时间: </span><input id="shipInfo_LeaveTime" size="12" readonly/></li>
             <li><span>备注:</span><textarea class = "remarks"></textarea></li>
 
         </ul>
