--- a/public/stylesheets/voyageManagement.css
+++ b/public/stylesheets/voyageManagement.css
@@ -4,7 +4,7 @@
 #route_Show>.route_Voyage_btn:active{background-position:-52px 4px;}
 
 
-#voyageList,#voyageDetails,#voyage_StandardRoute{position:fixed;z-index:100;display:none;border-radius:10px;background:rgba(6,2,5,0.8);}
+#voyageList,#voyageDetails,#voyage_StandardRoute,#voyage_StandardGoods{position:fixed;z-index:100;display:none;border-radius:10px;background:rgba(6,2,5,0.8);}
 #voyageList{width:650px;height:350px;top:50px;left:300px;display:none;}
 #voyageDetails{width:700px;height:440px;top:70px;left:300px;display:none;}
 
@@ -25,6 +25,7 @@
 .voyageList_List>ul:first-child{background:#000;}
 .voyageList_List>ul>li{width:100%;height:20px;line-height:20px;}
 .voyageList_List>ul>li>span{display:inline-block;text-align:center;font-size:13px;color:#fff;}
+.voyageList_content>.checked>span{color:#1aea1a}
 .voyageList_List>ul>li>span:nth-child(1){width:120px;}
 .voyageList_List>ul>li>span:nth-child(2){width:66px;}
 .voyageList_List>ul>li>span:nth-child(3){width:120px;}
@@ -37,13 +38,18 @@
 
 
 /*航次详情——船舶航次选择*/
-.shipVoyageList{width:88%;height:50px;margin:5px auto;}
+.shipVoyageList{width:90%;height:50px;margin:5px auto;}
 .shipVoyageList>div{display:inline-block;float:left;}
-.shipVoyageList_leftbtn,.shipVoyageList_rightbtn{width:20px;height:40px;background:#f0f;margin-top:5px;}
+.shipVoyageList_leftbtn,.shipVoyageList_rightbtn{width:24px;height:24px;;margin-top:5px; cursor: pointer;}
+.shipVoyageList_leftbtn{background:url("/images/left-arrow.png") no-repeat;}
+.shipVoyageList_leftbtn:hover{background:url("/images/left-arrow-hover.png") no-repeat;}
+.shipVoyageList_rightbtn{background:url("/images/right-arrow.png") no-repeat;}
+.shipVoyageList_rightbtn:hover{background:url("/images/right-arrow-hover.png") no-repeat;}
 .shipVoyageList_content{width:560px;height:40px;margin:5px 8px;overflow:hidden;}
-.shipVoyageList_List{height:40px;width:7000000px;}
+.shipVoyageList_List{height:40px;width:7000000px;margin-left:0px}
 .shipVoyageList_List>li{display:inline-block;float:left;margin:0px 5px;width:70px;}
-.shipVoyageList_List>li>div{width:24px;height:24px;background:#ccc;margin:0 auto;}
+.shipVoyageList_List>li>div{width:24px;height:24px;background:url("/images/ship.png");margin:0 auto;}
+/*.shipVoyageList_List>li>div{width:24px;height:24px;background:#ccc;margin:0 auto;}*/
 .shipVoyageList_List>li>span{display:inline-block;width:70px;text-align:center;line-height:16px;height:16px;position:relative;top:-3px;font-size:12px;color:#fff;}
 
 /*航次详情——航次信息*/
@@ -55,16 +61,20 @@
 .oneVoyageInfo>ul>li:nth-child(1){width:270px;}
 .oneVoyageInfo>ul>li:nth-child(2){width:95px;}
 .oneVoyageInfo>ul>li:nth-child(3){width:130px;}
-.oneVoyageInfo>ul>li:nth-child(3)>span{display:inline-block;height:20px;line-height:20px;}
-.oneVoyageInfo>ul>li:nth-child(3)>span:nth-child(2){display:inline-block;width:80px;height:18px;line-height:18px;border-radius:5px;border:1px solid #fff;padding-left:5px;cursor:pointer;}
+.oneVoyageInfo>ul>li:nth-child(3)>span{display:inline-block;height:20px;line-height:20px;margin-left:-5px;}
+.oneVoyageInfo>ul>li:nth-child(3)>span:nth-child(2){display:inline-block;width:80px;height:18px;line-height:18px;border-radius:5px;padding-left:5px;cursor:pointer;}
+/*.oneVoyageInfo>ul>li:nth-child(3)>span:nth-child(2){display:inline-block;width:80px;height:18px;line-height:18px;border-radius:5px;border:1px solid #fff;padding-left:5px;cursor:pointer;}*/
 .oneVoyageInfo>ul>li:nth-child(4){width:100px;}
 .oneVoyageInfo>ul>li:nth-child(4)>input{width:45px;padding-left:4px;height:18px;color:#fff;position:relative;top:-1px;background:transparent;border-radius:5px;border:1px solid #fff;outline:none;}
 .oneVoyageInfo>ul>li:nth-child(5),.oneVoyageInfo>ul>li:nth-child(6){width:320px;position:relative;}
 .oneVoyageInfo>ul>li:nth-child(6){margin-right:0px;}
 .oneVoyageInfo>ul>li:nth-child(5)>input,.oneVoyageInfo>ul>li:nth-child(6)>input{width:110px;padding-left:4px;height:18px;color:#fff;font-size:12px;background:transparent;border-radius:5px;border:1px solid transparent;outline:none;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;cursor:pointer;}
 .oneVoyageInfo>ul>li:nth-child(5)>span,.oneVoyageInfo>ul>li:nth-child(6)>span{margin-left:38px;}
-.oneVoyageInfo>ul>li:nth-child(5)>i,.oneVoyageInfo>ul>li:nth-child(6)>i{display:inline-block;width:20px;height:20px;background:#f08a24;position:absolute;margin-left:5px;cursor:pointer;}
+.oneVoyageInfo>ul>li:nth-child(5)>i,.oneVoyageInfo>ul>li:nth-child(6)>i{display:inline-block;width:20px;height:20px;position:absolute;margin-left:5px;cursor:pointer;}
+.oneVoyageInfo>ul .checked{background:url("/images/anch-yes.png") center no-repeat}
+.oneVoyageInfo>ul .toCheck{background:url("/images/always-yes.png") center no-repeat}
 .oneVoyageInfo>ul>li:nth-child(10),.oneVoyageInfo>ul>li:nth-child(14),.oneVoyageInfo>ul>li:nth-child(18){margin-right:0px;}
+/*.cargo_type_list{display:none; background:rgba(6,2,5,0.8);margin-left:40px}*/
 
 /*航次详情——停靠信息*/
 .oneVoyage_DockedInfo{width:100%;height:168px;margin:5px auto;}
@@ -111,8 +121,43 @@
 
 
 
+/*航次——标准货物*/
+#voyage_StandardGoods{width:960px;height:220px;top:70px;left:150px;display:none;}
+.productTypeSelect{width:94%;margin:5px auto;}
+.productTypeSelect>ul>li{display:inline-block;height:24px;margin-right:20px;}
+.productTypeSelect>ul>li>span{height:24px;line-height:24px;color:#fff;font-size:14px;}
+.productTypeSelect>ul>li>select{background:transparent;border:1px solid #fff;border-radius:5px;height:22px;line-height:22px;padding-left:5px;font-size:13px;color:#fff;}
+.productTypeSelect>ul>li>select>option{background:transparent;color:#000;}
+/*列表样式*/
+.StandardGoods_List{width:96%;margin:0 auto;}
+.StandardGoods_List>ul{border-bottom:1px dashed #fff;position:relative;margin-bottom:5px;}
+.StandardGoods_List>ul>li{height:24px;line-height:24px;}
+.StandardGoods_List>ul>li>span{display:inline-block;height:24px;line-height:24px;font-size:12px;color:#fff;text-align:center;overflow:hidden;}
+.StandardGoods_List>ul:first-child>li:first-child>span{font-size:13px;}
+.StandardGoods_List>ul>li>span:nth-child(1){width:80px;}
+.StandardGoods_List>ul>li>span:nth-child(2){width:65px;}
+.StandardGoods_List>ul>li>span:nth-child(3){width:65px;}
+.StandardGoods_List>ul>li>span:nth-child(4){width:65px;}
+.StandardGoods_List>ul>li>span:nth-child(5){width:65px;}
+.StandardGoods_List>ul>li>span:nth-child(6){width:65px;}
+.StandardGoods_List>ul>li>span:nth-child(7){width:65px;}
+.StandardGoods_List>ul>li>span:nth-child(8){width:65px;}
+.StandardGoods_List>ul>li>span:nth-child(9){width:350px;}
+.StandardGoods_List>ul>li>span:nth-child(10){width:100px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
+.StandardGoods_List>ul>.ProductDifference>span:nth-child(9){text-align:left;padding-left:20px;width:330px;}
+.StandardGoods_List>ul>.ComparedSelect_ProductInfo>span>select{background:transparent;border:1px solid #fff;border-radius:5px;height:22px;line-height:22px;padding-left:5px;font-size:13px;color:#fff;}
+.StandardGoods_List>ul>.ComparedSelect_ProductInfo>span>select>option{background:transparent;color:#000;}
+/*吨位、价格、系数计算样式*/
+.ProductDifference_ModulusCount{height:24px;width:320px;position:absolute;right:0px;bottom:0px;}
+.ProductDifference_ModulusCount>div{display:inline-block;width:100px;height:22px;border:1px solid #fff;border-radius:5px;}
+.ProductDifference_ModulusCount>div>span{display:inline-block;height:22px;line-height:22px;font-size:13px;color:#fff;overflow:hidden;}
+.ProductDifference_ModulusCount>div>input{display:inline-block;width:55px;padding-left:5px;height:18px;position:relative;top:-7px;font-size:12px;border-radius:5px;border:1px solid #fff;}
+.ProductDifference_ModulusCount>div:last-child>span:last-child{font-size:12px;}
 
-
-
-
-
+/*添加对比按钮*/
+.ProductDifference_addBtn{width:20px;height:20px;background:#ccc;margin-left:20px;cursor:pointer;}
+/*保存、取消按钮*/
+.StandardGoods_SaveBtn,.StandardGoods_CancelBtn{display:inline-block;width:80px;height:30px;text-align:center;line-height:30px;font-size:14px;color:#fff;background:#217BA2;border-radius:5px;margin-left:360px;cursor:pointer;position:relative;top:-15px;}
+.StandardGoods_CancelBtn{margin-left:140px;}
+.StandardGoods_SaveBtn:hover,.StandardGoods_CancelBtn:hover{background:#2EB1EA;}
+.StandardGoods_SaveBtn:active,.StandardGoods_CancelBtn:active{background:#4cb4e0;}
