--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -534,9 +534,13 @@
                 <li><div></div><span>2007-02-03</span></li>
                 <li><div></div><span>2007-02-03</span></li>
                 <li><div></div><span>2007-02-03</span></li>
+                <li><div></div><span>2007-02-04</span></li>
                 <li><div></div><span>2007-02-03</span></li>
                 <li><div></div><span>2007-02-03</span></li>
                 <li><div></div><span>2007-02-03</span></li>
+                <li><div></div><span>2007-02-03</span></li>
+                <li><div></div><span>2007-02-03</span></li>
+                <li><div></div><span>2007-02-06</span></li>
             </ul>
         </div>
         <div class="shipVoyageList_rightbtn"></div>
@@ -547,11 +551,27 @@
             <li>船名：GIOVANNI BATTISTA DE CARLINI</li>
             <li>IMO：1234567</li>
             <li><span>货物：</span>
-                <span>铁矿石</span>
+                <span class="cargo_type_list">
+                <select>
+                    <option value="1" selected="selected">铁矿石</option>
+                    <option value="2">原油</option>
+                    <option value="3">液化天然气</option>
+                    <option value="4">液化石油气</option>
+                </select>
+                </span>
+
+                <!--<span class="cargo_type">铁矿石</span>-->
+                <!--<ul class="cargo_type_list">-->
+                    <!--&lt;!&ndash;<li>""</li>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<li>铁矿石</li>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<li>原油</li>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<li>液化天然气</li>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<li>液化石油气</li>&ndash;&gt;-->
+                <!--</ul>-->
             </li>
             <li>吨位：<input type="text" value="400000"> t</li>
-            <li>出发港：<input type="text" value="Wilmington (N Carolina)" title="Wilmington (N Carolina)" disabled> <i></i><span>2007-02-03 20:00</span></li>
-            <li>到达港：<input type="text" value="Wilmington (N Carolina)" title="Wilmington (N Carolina)" disabled> <i></i><span>2007-02-03 20:00</span></li>
+            <li>出发港：<input type="text" value="Wilmington (N Carolina)" title="Wilmington (N Carolina)" disabled> <i class="toCheck"></i><span>2007-02-03 20:00</span></li>
+            <li>到达港：<input type="text" value="Wilmington (N Carolina)" title="Wilmington (N Carolina)" disabled> <i class="toCheck"></i><span>2007-02-03 20:00</span></li>
             <li>航行时长：20d20h20m</li>
             <li>航速：00.00kts</li>
             <li>航程：45678nm</li>
@@ -712,9 +732,64 @@
 <!--航次——标准货物-->
 <div id="voyage_StandardGoods">
     <div class="fleet_title">
-        <span>标准航线</span>
+        <span>标准货物</span>
         <div class="title_offbtn"></div>
     </div>
+    <div class="dividing_line"></div>
+    <div class="productTypeSelect">
+        <ul>
+            <li><span>国家：</span>
+                <select>
+                    <option value="">澳大利亚</option>
+                    <option value="">巴西</option>
+                    <option value="">印度</option>
+                </select>
+            </li>
+            <li><span>公司：</span>
+                <select>
+                    <option value="">力诺</option>
+                    <option value="">巴西</option>
+                    <option value="">印度</option>
+                </select>
+            </li>
+            <li><span>产品：</span>
+                <select>
+                    <option value="">皮尔巴拉混合矿(块)</option>
+                    <option value="">巴西</option>
+                    <option value="">印度</option>
+                </select>
+            </li>
+            <li><span>铁含量：</span>
+                <select>
+                    <option value="">65%</option>
+                    <option value="">巴西</option>
+                    <option value="">印度</option>
+                </select>
+            </li>
+        </ul>
+    </div>
+    <div class="StandardGoods_List">
+        <ul>
+            <li><span></span><span>FE</span><span>SiO2</span><span>Al2O</span><span>P</span><span>S</span><span>LOl</span><span>H2O</span><span>粒度</span><span>其他</span></li>
+            <li class="TopSelect_ProductInfo"><span>产品</span><span>00.00%</span><span>00.0000%</span><span>00.0000%</span><span>0.0000%</span><span>0.0000%</span><span>00.0000%</span><span>00.0000%</span><span>+00.00mm:00.00% -00.00mm:00.00% +00.00mm:00.00%</span><span>品位较高、粒度好，烧结较好，但含碱金属，不宜多用</span></li>
+        </ul>
+        <ul>
+            <li class="ComparedSelect_ProductInfo"><span><select>
+                    <option value="">大商所</option>
+                    <option value="">巴西</option>
+                    <option value="">印度</option>
+                </select></span><span>00.00%</span><span>00.0000%</span><span>00.0000%</span><span>0.0000%</span><span>0.0000%</span><span>00.0000%</span><span>00.0000%</span><span>+00.00mm:00.00% -00.00mm:00.00% +00.00mm:00.00%</span><span>品位较高、粒度好，烧结较好，但含碱金属，不宜多用</span></li>
+            <li class="ProductDifference"><span>差值</span><span>+00.00%</span><span>+00.0000%</span><span>+00.0000%</span><span>+0.0000%</span><span>+0.0000%</span><span>+00.0000%</span><span>+00.0000%</span><span>符合</span><span></span></li>
+            <div class="ProductDifference_ModulusCount">
+                <div><span>吨位:</span> <input type="text" value="000.00%"></div>
+                <div><span>价格:</span> <input type="text"></div>
+                <div><span>总系数:</span> <span>000.00%</span></div>
+            </div>
+        </ul>
+    </div>
+    <div class="ProductDifference_addBtn"></div>
+    <div class="StandardGoods_SaveBtn">保存</div>
+    <div class="StandardGoods_CancelBtn">取消</div>
 </div>
 
 
