--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -548,7 +548,7 @@
     <div class="dividing_line"></div>
     <div class="oneVoyageInfo">
         <ul>
-            <li>船名：GIOVANNI BATTISTA DE CARLINI</li>
+            <li>船名：<input type="text" value="GIOVANNI BATTISTA DE CARLINI" title="GIOVANNI BATTISTA DE CARLINI" disabled> </li>
             <li>IMO：1234567</li>
             <li><span>货物：</span>
                 <span class="cargo_type_list">
@@ -558,7 +558,7 @@
                     <option value="3">液化天然气</option>
                     <option value="4">液化石油气</option>
                 </select>
-                </span>
+                </span><i class="toCheck"></i>
 
                 <!--<span class="cargo_type">铁矿石</span>-->
                 <!--<ul class="cargo_type_list">-->
@@ -569,7 +569,7 @@
                     <!--&lt;!&ndash;<li>液化石油气</li>&ndash;&gt;-->
                 <!--</ul>-->
             </li>
-            <li>吨位：<input type="text" value="400000"> t</li>
+            <li>吨位：<input type="text" class="DWT" value="400000"> t</li>
             <li>出发港：<input type="text" value="Wilmington (N Carolina)" title="Wilmington (N Carolina)" disabled> <i class="toCheck"></i><span>2007-02-03 20:00</span></li>
             <li>到达港：<input type="text" value="Wilmington (N Carolina)" title="Wilmington (N Carolina)" disabled> <i class="toCheck"></i><span>2007-02-03 20:00</span></li>
             <li>航行时长：20d20h20m</li>
@@ -771,14 +771,14 @@
     <div class="StandardGoods_List">
         <ul>
             <li><span></span><span>FE</span><span>SiO2</span><span>Al2O</span><span>P</span><span>S</span><span>LOl</span><span>H2O</span><span>粒度</span><span>其他</span></li>
-            <li class="TopSelect_ProductInfo"><span>产品</span><span>00.00%</span><span>00.0000%</span><span>00.0000%</span><span>0.0000%</span><span>0.0000%</span><span>00.0000%</span><span>00.0000%</span><span>+00.00mm:00.00% -00.00mm:00.00% +00.00mm:00.00%</span><span>品位较高、粒度好，烧结较好，但含碱金属，不宜多用</span></li>
+            <li class="TopSelect_ProductInfo"><span>产品</span><span>00.00%</span><span>00.0000%</span><span>00.0000%</span><span>0.0000%</span><span>0.0000%</span><span>00.0000%</span><span>00.0000%</span><span>+00.00mm:00.00% -00.00mm:00.00% +00.00mm:00.00%</span><span><input type="text" value="品位较高、粒度好，烧结较好，但含碱金属，不宜多用" title="品位较高、粒度好，烧结较好，但含碱金属，不宜多用" disabled></span></li>
         </ul>
         <ul>
             <li class="ComparedSelect_ProductInfo"><span><select>
                     <option value="">大商所</option>
                     <option value="">巴西</option>
                     <option value="">印度</option>
-                </select></span><span>00.00%</span><span>00.0000%</span><span>00.0000%</span><span>0.0000%</span><span>0.0000%</span><span>00.0000%</span><span>00.0000%</span><span>+00.00mm:00.00% -00.00mm:00.00% +00.00mm:00.00%</span><span>品位较高、粒度好，烧结较好，但含碱金属，不宜多用</span></li>
+                </select></span><span>00.00%</span><span>00.0000%</span><span>00.0000%</span><span>0.0000%</span><span>0.0000%</span><span>00.0000%</span><span>00.0000%</span><span>+00.00mm:00.00% -00.00mm:00.00% +00.00mm:00.00%</span><span><input type="text" value="品位较高、粒度好，烧结较好，但含碱金属，不宜多用" title="品位较高、粒度好，烧结较好，但含碱金属，不宜多用" disabled></span></li>
             <li class="ProductDifference"><span>差值</span><span>+00.00%</span><span>+00.0000%</span><span>+00.0000%</span><span>+0.0000%</span><span>+0.0000%</span><span>+00.0000%</span><span>+00.0000%</span><span>符合</span><span></span></li>
             <div class="ProductDifference_ModulusCount">
                 <div><span>吨位:</span> <input type="text" value="000.00%"></div>
