--- a/public/stylesheets/voyageManagement.css
+++ b/public/stylesheets/voyageManagement.css
@@ -58,19 +58,23 @@
 .oneVoyageInfo>ul>li{display:inline-block;height:20px;line-height:20px;margin-top:4px;font-size:13px;color:#fff;float:left;margin-right:15px;}
 .oneVoyageInfo>ul>li:nth-child(even){width:166px;}
 .oneVoyageInfo>ul>li:nth-child(odd){width:140px;}
-.oneVoyageInfo>ul>li:nth-child(1){width:270px;}
-.oneVoyageInfo>ul>li:nth-child(2){width:95px;}
-.oneVoyageInfo>ul>li:nth-child(3){width:130px;}
+.oneVoyageInfo>ul>li:nth-child(1){width:196px;}
+.oneVoyageInfo>ul>li:nth-child(1)>input{width:150px;padding-left:4px;height:18px;color:#fff;font-size:13px;background:transparent;border-radius:5px;border:1px solid transparent;outline:none;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;cursor:pointer;}
+.oneVoyageInfo>ul>li:nth-child(2){width:115px;}
+.oneVoyageInfo>ul>li:nth-child(3){width:165px;position:relative;}
 .oneVoyageInfo>ul>li:nth-child(3)>span{display:inline-block;height:20px;line-height:20px;margin-left:-5px;}
 .oneVoyageInfo>ul>li:nth-child(3)>span:nth-child(2){display:inline-block;width:80px;height:18px;line-height:18px;border-radius:5px;padding-left:5px;cursor:pointer;}
+.oneVoyageInfo>ul>li:nth-child(3)>i{right:10px;}
 /*.oneVoyageInfo>ul>li:nth-child(3)>span:nth-child(2){display:inline-block;width:80px;height:18px;line-height:18px;border-radius:5px;border:1px solid #fff;padding-left:5px;cursor:pointer;}*/
-.oneVoyageInfo>ul>li:nth-child(4){width:100px;}
+.oneVoyageInfo>ul>li:nth-child(4){width:100px;margin-right:0px;}
 .oneVoyageInfo>ul>li:nth-child(4)>input{width:45px;padding-left:4px;height:18px;color:#fff;position:relative;top:-1px;background:transparent;border-radius:5px;border:1px solid #fff;outline:none;}
 .oneVoyageInfo>ul>li:nth-child(5),.oneVoyageInfo>ul>li:nth-child(6){width:320px;position:relative;}
 .oneVoyageInfo>ul>li:nth-child(6){margin-right:0px;}
-.oneVoyageInfo>ul>li:nth-child(5)>input,.oneVoyageInfo>ul>li:nth-child(6)>input{width:110px;padding-left:4px;height:18px;color:#fff;font-size:12px;background:transparent;border-radius:5px;border:1px solid transparent;outline:none;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;cursor:pointer;}
+.oneVoyageInfo>ul>li:nth-child(5)>input,.oneVoyageInfo>ul>li:nth-child(6)>input{width:110px;padding-left:4px;height:18px;color:#fff;font-size:13px;background:transparent;border-radius:5px;border:1px solid transparent;outline:none;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;cursor:pointer;}
 .oneVoyageInfo>ul>li:nth-child(5)>span,.oneVoyageInfo>ul>li:nth-child(6)>span{margin-left:38px;}
-.oneVoyageInfo>ul>li:nth-child(5)>i,.oneVoyageInfo>ul>li:nth-child(6)>i{display:inline-block;width:20px;height:20px;position:absolute;margin-left:5px;cursor:pointer;}
+/*.oneVoyageInfo>ul>li:nth-child(5)>i,.oneVoyageInfo>ul>li:nth-child(6)>i{display:inline-block;width:20px;height:20px;position:absolute;margin-left:5px;cursor:pointer;}*/
+/*.oneVoyageInfo>ul .checked{background:url("/images/anch-yes.png") center no-repeat}*/
+.oneVoyageInfo>ul>li>i,.oneVoyageInfo>ul>li>i{display:inline-block;width:20px;height:20px;position:absolute;margin-left:5px;cursor:pointer;}
 .oneVoyageInfo>ul .checked{background:url("/images/anch-yes.png") center no-repeat}
 .oneVoyageInfo>ul .toCheck{background:url("/images/always-yes.png") center no-repeat}
 .oneVoyageInfo>ul>li:nth-child(10),.oneVoyageInfo>ul>li:nth-child(14),.oneVoyageInfo>ul>li:nth-child(18){margin-right:0px;}
@@ -86,7 +90,9 @@
 .oneVoyage_DockedInfo>ul>li>span:nth-child(3){width:100px;}
 .oneVoyage_DockedInfo>ul>li>span:nth-child(4){width:80px;}
 .oneVoyage_DockedList{height:144px;overflow-y:scroll;}
-.oneVoyage_EndBtn{width:80px;height:20px;line-height:20px;text-align:center;font-size:13px;color:#fff;background:#00B7FF;border-radius:7px;position: absolute;top:2px;right:50px;cursor:pointer;display:none;}
+.oneVoyage_EndBtn{width:80px;height:20px;line-height:20px;text-align:center;font-size:13px;color:#fff;background:rgba(85, 85, 85, 0.71);border-radius:7px;position: absolute;top:2px;right:50px;cursor:pointer;display:none;}
+/*.oneVoyage_EndBtn{width:80px;height:20px;line-height:20px;text-align:center;font-size:13px;color:#fff;background:#4d90fe;border-radius:7px;position: absolute;top:2px;right:50px;cursor:pointer;display:none;}*/
+/*.oneVoyage_EndBtn{width:80px;height:20px;line-height:20px;text-align:center;font-size:13px;color:#fff;background:#00B7FF;border-radius:7px;position: absolute;top:2px;right:50px;cursor:pointer;display:block;}*/
 .oneVoyage_DockedList>li:hover{background:#217BA2;}
 
 /*航次详情——按钮操作*/
@@ -122,7 +128,7 @@
 
 
 /*航次——标准货物*/
-#voyage_StandardGoods{width:960px;height:220px;top:70px;left:150px;display:none;}
+#voyage_StandardGoods{width:1040px;height:220px;top:70px;left:150px;display:none;}
 .productTypeSelect{width:94%;margin:5px auto;}
 .productTypeSelect>ul>li{display:inline-block;height:24px;margin-right:20px;}
 .productTypeSelect>ul>li>span{height:24px;line-height:24px;color:#fff;font-size:14px;}
@@ -144,20 +150,24 @@
 .StandardGoods_List>ul>li>span:nth-child(8){width:65px;}
 .StandardGoods_List>ul>li>span:nth-child(9){width:350px;}
 .StandardGoods_List>ul>li>span:nth-child(10){width:100px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
+.StandardGoods_List>ul>li>span:nth-child(10)>input{width:96px;height:22px;color:#fff;font-size:12px;background:transparent;border:1px solid transparent;outline:none;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;cursor:pointer;}
+
+.StandardGoods_List>ul>.ProductDifference{padding-bottom:5px;}
 .StandardGoods_List>ul>.ProductDifference>span:nth-child(9){text-align:left;padding-left:20px;width:330px;}
 .StandardGoods_List>ul>.ComparedSelect_ProductInfo>span>select{background:transparent;border:1px solid #fff;border-radius:5px;height:22px;line-height:22px;padding-left:5px;font-size:13px;color:#fff;}
 .StandardGoods_List>ul>.ComparedSelect_ProductInfo>span>select>option{background:transparent;color:#000;}
 /*吨位、价格、系数计算样式*/
-.ProductDifference_ModulusCount{height:24px;width:320px;position:absolute;right:0px;bottom:0px;}
+.ProductDifference_ModulusCount{height:24px;width:320px;position:absolute;right:0px;bottom:5px;}
 .ProductDifference_ModulusCount>div{display:inline-block;width:100px;height:22px;border:1px solid #fff;border-radius:5px;}
 .ProductDifference_ModulusCount>div>span{display:inline-block;height:22px;line-height:22px;font-size:13px;color:#fff;overflow:hidden;}
 .ProductDifference_ModulusCount>div>input{display:inline-block;width:55px;padding-left:5px;height:18px;position:relative;top:-7px;font-size:12px;border-radius:5px;border:1px solid #fff;}
 .ProductDifference_ModulusCount>div:last-child>span:last-child{font-size:12px;}
 
 /*添加对比按钮*/
-.ProductDifference_addBtn{width:20px;height:20px;background:#ccc;margin-left:20px;cursor:pointer;}
+.ProductDifference_addBtn{width:24px;height:24px;background:url("/images/plus.png") center no-repeat;margin-left:20px;cursor:pointer;}
+/*.ProductDifference_addBtn{width:20px;height:20px;background:#ccc;margin-left:20px;cursor:pointer;}*/
 /*保存、取消按钮*/
-.StandardGoods_SaveBtn,.StandardGoods_CancelBtn{display:inline-block;width:80px;height:30px;text-align:center;line-height:30px;font-size:14px;color:#fff;background:#217BA2;border-radius:5px;margin-left:360px;cursor:pointer;position:relative;top:-15px;}
+.StandardGoods_SaveBtn,.StandardGoods_CancelBtn{display:inline-block;width:80px;height:30px;text-align:center;line-height:30px;font-size:14px;color:#fff;background:#217BA2;border-radius:5px;margin-left:360px;cursor:pointer;position:relative;top:-17px;}
 .StandardGoods_CancelBtn{margin-left:140px;}
 .StandardGoods_SaveBtn:hover,.StandardGoods_CancelBtn:hover{background:#2EB1EA;}
 .StandardGoods_SaveBtn:active,.StandardGoods_CancelBtn:active{background:#4cb4e0;}
