--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -716,10 +716,12 @@
             <li><span></span><span>装港</span><span>卸港</span><span>航程</span><span>货量</span><span>货物</span><span>装卸</span><span>SH</span><span>LoadWait</span><span>Diswait</span><span>Age</span><span>系数</span></li>
             <li><span>123456</span><span>Loyang Offshore Base</span><span>Pulau Ayer Merbau</span><span>00000</span><span>200000</span><span>铁矿石</span><span><select>
                 <option value="">FIO</option>
-                <option value="">FIO</option>
+                <option value="">FIOST</option>
+                <option value="">FI</option>
+                <option value="">FO</option>
             </select></span><span><select>
                 <option value="">SHInc</option>
-                <option value="">SHInc</option>
+                <option value="">SHExc</option>
             </select></span><span>00h00m</span><span>00h00m</span><span>20</span><span><input type="text" value="0.0"></span></li>
             <li><span>BITR-Asia Route 12</span><span>Pulau Ayer Merbau</span><span>Pulau Ayer Merbau</span><span>00000</span><span>200000</span><span>铁矿石</span><span>FIO</span><span>SHInc</span><span>00h00m</span><span>00h00m</span><span>20</span><span>1.0</span></li>
             <li><span>基差</span><span>不符合</span><span>不符合</span><span>+0000</span><span>+000000</span><span>不符合</span><span>不符合</span><span>不符合</span><span>+00h00m</span><span>+00h00m</span><span>+00</span><span></span></li>
@@ -781,8 +783,8 @@
                 </select></span><span>00.00%</span><span>00.0000%</span><span>00.0000%</span><span>0.0000%</span><span>0.0000%</span><span>00.0000%</span><span>00.0000%</span><span>+00.00mm:00.00% -00.00mm:00.00% +00.00mm:00.00%</span><span><input type="text" value="品位较高、粒度好，烧结较好，但含碱金属，不宜多用" title="品位较高、粒度好，烧结较好，但含碱金属，不宜多用" disabled></span></li>
             <li class="ProductDifference"><span>差值</span><span>+00.00%</span><span>+00.0000%</span><span>+00.0000%</span><span>+0.0000%</span><span>+0.0000%</span><span>+00.0000%</span><span>+00.0000%</span><span>符合</span><span></span></li>
             <div class="ProductDifference_ModulusCount">
-                <div><span>吨位:</span> <input type="text" value="000.00%"></div>
-                <div><span>价格:</span> <input type="text"></div>
+                <div><span>吨位:</span> <input type="text" value="000.00"> <span>%</span></div>
+                <div><span>价格:</span> <input type="text"> <span>%</span></div>
                 <div><span>总系数:</span> <span>000.00%</span></div>
             </div>
         </ul>
