--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -569,7 +569,7 @@
                     <!--&lt;!&ndash;<li>液化石油气</li>&ndash;&gt;-->
                 <!--</ul>-->
             </li>
-            <li>吨位：<input type="text" class="DWT" value="400000"> t</li>
+            <li>吨位：<input type="text" class="DWT" placeholder="400000"> t</li>
             <li>出发港：<input type="text" value="Wilmington (N Carolina)" title="Wilmington (N Carolina)" disabled> <i class="toCheck"></i><span>2007-02-03 20:00</span></li>
             <li>到达港：<input type="text" value="Wilmington (N Carolina)" title="Wilmington (N Carolina)" disabled> <i class="toCheck"></i><span>2007-02-03 20:00</span></li>
             <li>航行时长：20d20h20m</li>
@@ -1308,9 +1308,6 @@
 
 <!--&lt;!&ndash;加载显示&ndash;&gt;-->
 <!--<div class="loader"></div>-->
-
-
-
 </body>
 
 <!--<script type="text/javascript" src="/javascripts/require.js"></script>-->
@@ -1654,7 +1651,6 @@
 </script>
 <script type="text/javascript" src="/javascripts/basicSkills.js"></script>
 <script type="text/javascript" src="/javascripts/portInfo.js"></script>
-<!--<script type="text/javascript" src="/javascripts/maodi.js"></script>-->
 <script type="text/javascript" src="/javascripts/manage.js"></script>
 <script type="text/javascript" src="/javascripts/jsapi.js"></script>
 <script type="text/javascript" src="/javascripts/corechart.js"></script>      
